// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout should render empty 1`] = `
<div
  className="container"
>
  <div
    data-mock="Helmet"
  >
    {
  "htmlAttributes": {
    "lang": "en"
  },
  "meta": [
    {
      "name": "description",
      "content": "Site description"
    }
  ],
  "title": "Regular title"
}
  </div>
  <div
    className="sc-bdVaJa jaOyYS"
  >
    <button
      className="sc-bwzfXH frwUYB"
      onClick={[Function]}
    >
      <div
        data-mock="Icon"
      />
    </button>
    <p
      className="display-4"
    >
      Meta title
    </p>
  </div>
</div>
`;

exports[`Layout should render with children 1`] = `
<div
  className="container"
>
  <div
    data-mock="Helmet"
  >
    {
  "htmlAttributes": {
    "lang": "en"
  },
  "meta": [
    {
      "name": "description",
      "content": "Site description"
    }
  ],
  "title": "Regular title"
}
  </div>
  <div
    className="sc-bdVaJa jaOyYS"
  >
    <button
      className="sc-bwzfXH frwUYB"
      onClick={[Function]}
    >
      <div
        data-mock="Icon"
      />
    </button>
    <p
      className="display-4"
    >
      Meta title
    </p>
  </div>
  <div>
    Some child
  </div>
</div>
`;
